spacing choose and fixing grid

--- a/website/eacr/static/css/theses.css
+++ b/website/eacr/static/css/theses.css
@@ -130,3 +130,12 @@ h1 h2 {
 .thesis-these {
     line-height: 2rem;
 }
+
+.center-pills {
+    display: inline-flex;
+}
+
+.li-choose{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
